Fix for horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,8 @@ button:hover {
   display:flex;
   flex-direction: column;
   min-height: calc(100vh - 3rem);
+  width: 100%; /* or width: 100vw; */
+  overflow-x: hidden; /* This is the key! */
 }
 
 .productContainer, .mainContainer{
